tests/snapshots/test_runner__tests__compiler__typecheck__contextual_unification_11.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
// Contextual unification for If-expression
let x: { a: String } = if(true) {a: 2} else {a: "hello"}

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/contextual_unification_11.kk:2:37
  │
2 │ let x: { a: String } = if(true) {a: 2} else {a: "hello"}
  │                                     ^ Type mismatch
  │
  = +---------------+-------------+
    | EXPECTED TYPE | ACTUAL TYPE |
    +---------------+-------------+
    | - String      | + Integer   |
    +---------------+-------------+
